[package]
name = "uzparine"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive", "error-context"] }
futures = "0.3.31"
gpiocdev = { version = "0.7.3", features = ["async_tokio"] }
homie5 = "0.7.0"
rumqttc = { version = "0.24.0", features = ["url"] }
thiserror = "2.0.12"
tokio = "1.44.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19" }
